updating upload storage for public folder in filesystem and other update

--- a/public/assets/mobirise/css/mbr-additional.css
+++ b/public/assets/mobirise/css/mbr-additional.css
@@ -1346,7 +1346,7 @@ a {
   color: #ffffff;
 }
 .cid-sIpKoQ30mN {
-  padding-top: 150px;
+  padding-top: 60px;
   padding-bottom: 75px;
   background-color: #ffffff;
   position: relative;
@@ -2622,7 +2622,7 @@ a {
   background-color: #1c73ba;
 }
 .cid-sIq8h1uDBV {
-  padding-top: 7rem;
+  padding-top: 2rem;
   padding-bottom: 1rem;
   background-color: #f9f9f9;
 }
@@ -3942,7 +3942,7 @@ a {
   color: #ffffff;
 }
 .cid-sIqqheaqtl {
-  padding-top: 160px;
+  padding-top: 80px;
   padding-bottom: 45px;
   background-color: #1c73ba;
 }
@@ -4707,7 +4707,7 @@ a {
   color: #ffffff;
 }
 .cid-sIqCr2MrZ5 {
-  padding-top: 9rem;
+  padding-top: 5rem;
   padding-bottom: 6rem;
   background-image: url("../../../assets/images/background4.jpg");
 }
@@ -5503,7 +5503,7 @@ a {
   color: #ffffff;
 }
 .cid-sIqITZHSZd {
-  padding-top: 120px;
+  padding-top: 75px;
   padding-bottom: 60px;
   background-color: #1c73ba;
 }
@@ -5621,7 +5621,7 @@ a {
   color: #ffffff;
 }
 .cid-sIrPBkLOUh .mbr-section-title {
-  color: #073b4c;
+  color: #1c73ba;
 }
 .cid-sIpIi9d37Z {
   padding-top: 30px;
@@ -6292,7 +6292,7 @@ a {
   color: #ffffff;
 }
 .cid-sIrEzxbcOc {
-  padding-top: 10rem;
+  padding-top: 8rem;
   padding-bottom: 1rem;
   background-color: #1c73ba;
 }
@@ -7355,7 +7355,7 @@ a {
   color: #ffffff;
 }
 .cid-sIs6gkDQqC {
-  padding-top: 120px;
+  padding-top: 30px;
   padding-bottom: 0px;
   background-image: url("../../../assets/images/06.jpg");
 }
@@ -8120,7 +8120,7 @@ a {
   color: #ffffff;
 }
 .cid-sIqERhONdL {
-  padding-top: 10rem;
+  padding-top: 5rem;
   padding-bottom: 0rem;
   background-color: #1c73ba;
 }
@@ -8820,7 +8820,7 @@ a {
   color: #ffffff;
 }
 .cid-sIDTv8LluN {
-  padding-top: 10rem;
+  padding-top: 4rem;
   padding-bottom: 7rem;
   background-color: #f2f3f7;
 }
@@ -10252,7 +10252,7 @@ a {
   color: #ffffff;
 }
 .cid-sITwirkIJg {
-  padding-top: 8rem;
+  padding-top: 4rem;
   padding-bottom: 1rem;
   background-color: #1c73ba;
 }
@@ -11076,7 +11076,7 @@ a {
   color: #ffffff;
 }
 .cid-sIYtuK6x6u {
-  padding-top: 8rem;
+  padding-top: 4rem;
   padding-bottom: 1rem;
   background-color: #1c73ba;
 }
@@ -11852,7 +11852,7 @@ a {
   color: #ffffff;
 }
 .cid-sIYwjjHCfB {
-  padding-top: 10rem;
+  padding-top: 4rem;
   padding-bottom: 1rem;
   background-color: #efefef;
 }
@@ -12701,7 +12701,7 @@ a {
   color: #ffffff;
 }
 .cid-sIYyERI2Kj {
-  padding-top: 8rem;
+  padding-top: 4rem;
   padding-bottom: 1rem;
   background-color: #ffffff;
 }
