implementing color change for every shop

--- a/public/assets/mobirise/css/mbr-additional.css
+++ b/public/assets/mobirise/css/mbr-additional.css
@@ -1079,7 +1079,7 @@ a {
   transform: scale(1.8, 1.8);
 }
 .cid-sIpKoQ30mN #e1_ellipse {
-  fill: #1c73ba !important;
+  fill: #ffffff !important;
 }
 .cid-sIpKoQ30mN img {
   width: 80%;
@@ -1095,11 +1095,11 @@ a {
   }
 }
 .cid-sIpKoQ30mN H1 {
-  color: #ffffff;
+  color: #1c73ba;
 }
 .cid-sIpKoQ30mN .mbr-text,
 .cid-sIpKoQ30mN .mbr-section-btn {
-  color: #ffffff;
+  color: #000000;
 }
 .cid-sIpLx9ZEd5 {
   padding-top: 15px;
@@ -1993,7 +1993,7 @@ a {
 }
 .cid-sIYpYiiWdO .mbr-text {
   text-align: center;
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIYpYiiWdO .pt-0 {
   padding-top: 0 !important;
@@ -2125,7 +2125,7 @@ a {
   width: 100%;
   margin: 0;
   text-align: center;
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIYpYiiWdO .modal-body {
   position: relative;
@@ -2426,7 +2426,7 @@ a {
 }
 .cid-sIs2cxiwgM .mbr-text {
   text-align: center;
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIs2cxiwgM .pt-0 {
   padding-top: 0 !important;
@@ -2558,7 +2558,7 @@ a {
   width: 100%;
   margin: 0;
   text-align: center;
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIs2cxiwgM .modal-body {
   position: relative;
@@ -2698,7 +2698,7 @@ a {
   margin: 0;
 }
 .cid-sIs2cxiwgM LABEL {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIq8p3szqN {
   padding-top: 3rem;
@@ -2735,10 +2735,10 @@ a {
 }
 .cid-sIq8p3szqN .card-title,
 .cid-sIq8p3szqN .card-box {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIq8p3szqN .icon-title {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIq8p3szqN .icon-text {
   color: #111111;
@@ -2862,7 +2862,7 @@ a {
   margin: 0 auto;
 }
 .cid-sIqdBA3T3C .mbr-text {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIqbbpAaB5 {
   padding-top: 0rem;
@@ -2899,7 +2899,7 @@ a {
   border-color: transparent !important;
 }
 .cid-sIqbbpAaB5 .mbr-section-title {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIqbbpAaB5 LABEL {
   color: #ffffff;
@@ -2991,7 +2991,7 @@ a {
 }
 .cid-sIqcmgx4Lt .mbr-section-title,
 .cid-sIqcmgx4Lt .mbr-social-likes {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIpIi9d37Z {
   padding-top: 30px;
@@ -3987,7 +3987,7 @@ a {
 }
 .cid-sIqBCEHyLX .mbr-section-title,
 .cid-sIqBCEHyLX .underline {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIqE76THls {
   padding-top: 0rem;
@@ -4501,7 +4501,7 @@ a {
   color: #ffffff;
 }
 .cid-sIrPBkLOUh .mbr-section-title {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sK221ge3Dr {
   padding-top: 1rem;
@@ -5242,7 +5242,7 @@ a {
   text-align: center;
 }
 .cid-sIsb7KGEzR H3 {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIrHQR2e1u {
   padding-top: 1rem;
@@ -5314,7 +5314,7 @@ a {
 }
 .cid-sIrHQR2e1u .mbr-section-title,
 .cid-sIrHQR2e1u .mbr-social-likes {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIpIi9d37Z {
   padding-top: 30px;
@@ -6640,7 +6640,7 @@ a {
   border-radius: 3rem;
 }
 .cid-sIDTv8LluN .card-title {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIDTv8LluN .mbr-text,
 .cid-sIDTv8LluN .mbr-section-btn {
@@ -7252,7 +7252,7 @@ a {
   }
 }
 .cid-sIYrSkcD8K .card-title {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIpIi9d37Z {
   padding-top: 30px;
@@ -7686,7 +7686,7 @@ a {
 }
 .cid-sIYEAqftSL .mbr-section-title {
   margin-bottom: 10px;
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIYEAqftSL .table__title {
   padding-top: 22px;
@@ -7709,7 +7709,7 @@ a {
 }
 .cid-sIYEAqftSL .title {
   letter-spacing: 2px;
-  color: #919dab;
+  color: #000000;
   margin-bottom: 0;
 }
 .cid-sIYEAqftSL .border__bot:last-child {
@@ -7731,7 +7731,7 @@ a {
 .cid-sIYEAqftSL .title__text {
   margin-bottom: 0;
   font-weight: 400;
-  color: #dc8f1d;
+  color: #ffffff;
 }
 .cid-sIYEAqftSL .text {
   margin-top: 10px;
@@ -8191,7 +8191,7 @@ a {
   color: #777777;
 }
 .cid-sIYwjjHCfB .mbr-section-subtitle {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIYwjjHCfB .mbr-section-title {
   color: #073b4c;
@@ -8317,7 +8317,7 @@ a {
 }
 .cid-sIYwO7FN8v .mbr-section-title,
 .cid-sIYwO7FN8v .underline {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIpIi9d37Z {
   padding-top: 30px;
@@ -8729,7 +8729,7 @@ a {
   }
 }
 .cid-sIYyERI2Kj .mbr-section-title {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIYyERI2Kj .mbr-text,
 .cid-sIYyERI2Kj .mbr-section-btn {
@@ -8759,7 +8759,7 @@ a {
 }
 .cid-sIYA66Ebd1 .mbr-section-title {
   margin-bottom: 10px;
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIYA66Ebd1 .table__title {
   padding-top: 22px;
@@ -8782,7 +8782,7 @@ a {
 }
 .cid-sIYA66Ebd1 .title {
   letter-spacing: 2px;
-  color: #dc8f1d;
+  color: #000000;
   margin-bottom: 0;
 }
 .cid-sIYA66Ebd1 .border__bot:last-child {
@@ -8820,7 +8820,7 @@ a {
 }
 .cid-sIYA66Ebd1 .text,
 .cid-sIYA66Ebd1 .mbr-section-btn {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIpIi9d37Z {
   padding-top: 30px;
@@ -9229,7 +9229,7 @@ a {
   border-radius: 35px !important;
 }
 .cid-sJhuJgymAF .mbr-section-subtitle {
-  color: #1c73ba;
+  color: #000000;
   font-weight: 700;
 }
 .cid-sJhuJgymAF .panel-body {
@@ -9377,7 +9377,10 @@ a {
 }
 .cid-sJhuJgymAF .mbr-section-title,
 .cid-sJhuJgymAF .ornament {
-  color: #4490c9;
+  color: #000000;
+}
+.cid-sJhuJgymAF H5 {
+  color: #000000;
 }
 .cid-sJhyVPgW3E {
   padding-top: 15px;
@@ -9389,10 +9392,10 @@ a {
   opacity: 0.4;
 }
 .cid-sJhyVPgW3E H5 {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sJhyVPgW3E LABEL {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sJc9pEj434 {
   z-index: 1000;
@@ -9821,7 +9824,7 @@ a {
 }
 .cid-sJhAijRJkF .mbr-text {
   text-align: center;
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sJhAijRJkF .pt-0 {
   padding-top: 0 !important;
@@ -9953,7 +9956,7 @@ a {
   width: 100%;
   margin: 0;
   text-align: center;
-  color: #1c73ba;
+  color: #073b4c;
 }
 .cid-sJhAijRJkF .modal-body {
   position: relative;
@@ -10093,7 +10096,7 @@ a {
   margin: 0;
 }
 .cid-sJhAijRJkF LABEL {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIpIi9d37Z {
   padding-top: 30px;
@@ -10199,7 +10202,7 @@ a {
 }
 .cid-sK1HkALGyI .card-title,
 .cid-sK1HkALGyI .card-box {
-  color: #4490c9;
+  color: #000000;
 }
 .cid-sIpIi9d37Z {
   padding-top: 30px;
@@ -10704,10 +10707,10 @@ a {
   opacity: 0.4;
 }
 .cid-sK1AHb7KTV H4 {
-  color: #1574bb;
+  color: #000000;
 }
 .cid-sK1AHb7KTV LABEL {
-  color: #dd9016;
+  color: #000000;
 }
 .cid-sIpIi9d37Z {
   padding-top: 30px;
@@ -11123,10 +11126,10 @@ a {
   opacity: 0.4;
 }
 .cid-sK1JIDafy7 H4 {
-  color: #4490c9;
+  color: #000000;
 }
 .cid-sK1JIDafy7 LABEL {
-  color: #1c73ba;
+  color: #000000;
 }
 .cid-sIpIi9d37Z {
   padding-top: 30px;
